// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/profiles/twitter GetProfiles when access token is valid returns a list of profiles 1`] = `
Ok {
  "value": Object {
    "profiles": Array [
      Object {
        "description": "romantic moron, 1/8th hippie #bitcoin",
        "followersCount": 6235639,
        "followingCount": 4557,
        "id": "12",
        "imageUrl": "https://pbs.twimg.com/profile_images/1115644092329758721/AFjOr-K8_normal.jpg",
        "location": undefined,
        "name": "jack⚡️",
        "postsCount": 28306,
        "profileUrl": "https://twitter.com/jack",
        "username": "jack",
        "website": undefined,
      },
      Object {
        "description": "What's happening?!",
        "followersCount": 61261775,
        "followingCount": 0,
        "id": "783214",
        "imageUrl": "https://pbs.twimg.com/profile_images/1488548719062654976/u6qfBBkF_normal.jpg",
        "location": "everywhere",
        "name": "Twitter",
        "postsCount": 15008,
        "profileUrl": "https://twitter.com/Twitter",
        "username": "Twitter",
        "website": "https://t.co/DAtOo6uuHk",
      },
      Object {
        "description": "How people build software. 

Need help? Send us a message at https://t.co/YU5nzbpDIg for support.",
        "followersCount": 2241827,
        "followingCount": 332,
        "id": "13334762",
        "imageUrl": "https://pbs.twimg.com/profile_images/1414990564408262661/r6YemvF9_normal.jpg",
        "location": "San Francisco, CA",
        "name": "GitHub",
        "postsCount": 6904,
        "profileUrl": "https://twitter.com/github",
        "username": "github",
        "website": undefined,
      },
      Object {
        "description": "Low-code API & Edge API Integration. We build the successor to APIs so you can focus on your business and never worry about APIs again.",
        "followersCount": 678,
        "followingCount": 545,
        "id": "1196797704015400960",
        "imageUrl": "https://pbs.twimg.com/profile_images/1343506099786412032/WXYqcht6_normal.jpg",
        "location": undefined,
        "name": "superface",
        "postsCount": 158,
        "profileUrl": "https://twitter.com/superfaceai",
        "username": "superfaceai",
        "website": "https://t.co/1eIDvslNuK",
      },
      Object {
        "description": "NASA Mars rover. Launch: July 30, 2020. Landing: Feb. 18, 2021. Hobbies: Photography, collecting rocks, off-roading. 🚀 Team HQ @NASAJPL",
        "followersCount": 2917577,
        "followingCount": 58,
        "id": "1232783237623119872",
        "imageUrl": "https://pbs.twimg.com/profile_images/1379527227436531712/QasZP9s-_normal.jpg",
        "location": "Jezero Crater, Mars",
        "name": "NASA's Perseverance Mars Rover",
        "postsCount": 862,
        "profileUrl": "https://twitter.com/NASAPersevere",
        "username": "NASAPersevere",
        "website": "https://t.co/GpTOmL7zGl",
      },
      Object {
        "description": "Yes, this is the official Twitter account of Ukraine. Nice pics: #BeautifulUkraine⛰ Our music: #UkieBeats🎶",
        "followersCount": 2024469,
        "followingCount": 25,
        "id": "732521058507620356",
        "imageUrl": "https://pbs.twimg.com/profile_images/1011852346232631296/gw8Yp3dG_normal.jpg",
        "location": "Ukraine",
        "name": "Ukraine / Україна",
        "postsCount": 1805,
        "profileUrl": "https://twitter.com/Ukraine",
        "username": "Ukraine",
        "website": undefined,
      },
    ],
    "rateLimit": Object {
      "bucket": "User lookup",
      "remainingRequests": 898,
      "remainingRequestsPercentage": 99.77777777777777,
      "resetTimestamp": 1649344824,
      "totalRequests": 900,
    },
  },
}
`;

exports[`social-media/profiles/twitter GetProfilesByUsername when access token is valid returns a list of profiles 1`] = `
Ok {
  "value": Object {
    "profiles": Array [
      Object {
        "description": "NASA Mars rover. Launch: July 30, 2020. Landing: Feb. 18, 2021. Hobbies: Photography, collecting rocks, off-roading. 🚀 Team HQ @NASAJPL",
        "followersCount": 2917577,
        "followingCount": 58,
        "id": "1232783237623119872",
        "imageUrl": "https://pbs.twimg.com/profile_images/1379527227436531712/QasZP9s-_normal.jpg",
        "location": "Jezero Crater, Mars",
        "name": "NASA's Perseverance Mars Rover",
        "postsCount": 862,
        "profileUrl": "https://twitter.com/NASAPersevere",
        "username": "NASAPersevere",
        "website": "https://t.co/GpTOmL7zGl",
      },
      Object {
        "description": "Low-code API & Edge API Integration. We build the successor to APIs so you can focus on your business and never worry about APIs again.",
        "followersCount": 678,
        "followingCount": 545,
        "id": "1196797704015400960",
        "imageUrl": "https://pbs.twimg.com/profile_images/1343506099786412032/WXYqcht6_normal.jpg",
        "location": undefined,
        "name": "superface",
        "postsCount": 158,
        "profileUrl": "https://twitter.com/superfaceai",
        "username": "superfaceai",
        "website": "https://t.co/1eIDvslNuK",
      },
      Object {
        "description": "Building tools to fuel developer community growth. 
Join our free beta. 👇",
        "followersCount": 101,
        "followingCount": 82,
        "id": "1362101830923259908",
        "imageUrl": "https://pbs.twimg.com/profile_images/1419741008716251141/6exZe94-_normal.jpg",
        "location": "🌍 remote",
        "name": "Crowd.dev",
        "postsCount": 88,
        "profileUrl": "https://twitter.com/CrowdDevHQ",
        "username": "CrowdDevHQ",
        "website": "https://t.co/GRLDhqFWk4",
      },
    ],
    "rateLimit": Object {
      "bucket": "User lookup",
      "remainingRequests": 899,
      "remainingRequestsPercentage": 99.8888888888889,
      "resetTimestamp": 1649345217,
      "totalRequests": 900,
    },
  },
}
`;
